@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-src/ACKNOWLEDGMENTS,v 1.31 2005/08/22 10:49:04 ph10 Exp $
+$Cambridge: exim/exim-src/ACKNOWLEDGMENTS,v 1.32 2005/08/23 08:46:33 ph10 Exp $
 
 EXIM ACKNOWLEDGEMENTS
 
@@ -20,7 +20,7 @@ relatively small patches.
 Philip Hazel
 
 Lists created: 20 November 2002
-Last updated:  29 July 2005
+Last updated:  23 August 2005
 
 
 THE OLD LIST
@@ -151,6 +151,7 @@ Steve Haslam              Lots of stuff, including
                             HMAC computations
                             Better error messages for BDB
 Sheldon Hearn             Suggested patch for smtp_accept_max_nonmail_hosts
+Jakob Hirsch              Patch for % operator
 Kjetil Torgrim Homme      Patch for require_files problem on NFS file systems
 Tom Hughes                Suggested patch for $n bug in pipe command from filter
 Pierre Humblet            Continued Cygwin support
